--- a/Models/-VC/2025.06.01_ReFlow-VC.md
+++ b/Models/-VC/2025.06.01_ReFlow-VC.md
@@ -34,3 +34,61 @@ In this paper, we introduce ReFlow-VC, a novel high-fidelity speech conversion m
 Specifically, ReFlow-VC is an Ordinary Differential Equation (ODE) model that transforms a Gaussian distribution to the true Mel-spectrogram distribution along the most direct path.
 Furthermore, we propose a modeling approach that optimizes speaker features by utilizing both content and pitch information, allowing speaker features to reflect the properties of the current speech more accurately.
 Experimental results show that ReFlow-VC performs exceptionally well in small datasets and zero-shot scenarios.
+
+## 1·Introduction
+
+![](11111111111111.png)
+
+<a id="fig:1">The diagram of the Rectified Flow model, with the meanings of the icons at the top.(a) Linear interpolation of data samples ($X_0$, $X_1$).(b) The rectified flow $Z_t$ induced by ($X_0$, $X_1$).(c) The linear interpolation of data samples ($Z_0$, $Z_1$) of rectified flow $Z_t$.(d) The rectified flow induced from ($Z_0$, $Z_1$), propagating along straight paths.</a>
+
+Zero-shot voice conversion (VC) aims to convert speech from any source speaker to the speech of any target speaker without changing the linguistic content.
+
+VC achieves this by decomposing the source speech into different components, including the speaker's timbre, linguistic content, and speaking style.
+
+Its applications span across various practical fields such as speech anonymization and audiobook production [^Srivastava2022Privacy].
+
+The core challenge of zero-shot VC lies in effectively modeling, disentangling, and utilizing various attributes of speech, including content and timbre.
+
+Traditional zero-shot methods typically combine the linguistic content and speaking style of the source speaker with the timbre of the target speaker to generate the converted speech.
+
+In the groundbreaking Auto-VC model [^Qian2019Autovc], speaker embeddings from a pre-trained speaker verification network are used as conditional inputs.
+
+Other models have been improved upon this by enriching the conditional inputs with additional speech features, such as pitch and loudness, or by jointly training voice conversion and speaker embedding networks.
+
+Additionally, several studies have utilized attention mechanisms to better integrate the features of reference speech into the source speech, thus enhancing the performance of the decoder [^Chen2021Again-Vc].
+
+However, due to the complexity of speech signals [^Pan2024GEmo-Clap] and the limitations in modeling timbre and content [^Hussain2023Ace-Vc], these methods still leave significant room for performance improvement.
+
+Most traditional voice conversion models are based on autoencoder architectures, such as Auto-VC, VAE-VC [^Tobing2019Non-Parallel], and CycleGAN-VC [^Kaneko2018Cyclegan-Vc], or generative adversarial networks (GANs) [^Goodfellow2020Generative], like CycleGAN-VC [^Kaneko2018Cyclegan-Vc], CycleGAN-VC2 [^Kaneko2019Cyclegan-Vc2], and StarGAN-VC [^Kameoka2018Stargan-Vc].
+
+However, relatively few voice conversion models are based on flow models.
+
+Notable voice conversion models, such as Free-VC [^Li2023Freevc], Auto-VC, and Diff-VC [^Popov2021Diffusion-Based], have achieved significant success.
+
+However, there remains room for exploration in terms of model architecture and methodology.
+
+Among them, diffusion models, including denoising diffusion probabilistic models (DDPM) and score-based generative models, have gained widespread attention due to their potential to generate high-quality samples.
+
+A major drawback of diffusion models, however, is that generating satisfactory samples requires multiple iterations [^Guan2024Reflow-TTS].
+
+To address this, several voice conversion methods have been proposed.
+
+Diff-VC gradually converts noise into Mel spectrograms by constructing a stochastic differential equation (SDE) and solving the reverse SDE with a numerical ordinary differential equation (ODE) solver.
+
+While it generates high-quality audio, the large number of iterations in the reverse process affects inference speed.
+
+DDDM-VC addresses the issue of multiple iterations required for generating high-quality samples by introducing a decoupled denoising diffusion model and a prior mixing strategy [^Choi2024DDDM-Vc].
+
+In this paper, we present ReFlow-VC, a voice conversion model based on a modified flow model.
+
+Our proposed method achieves outstanding voice conversion results, and the contributions of this paper are as follows:
+
+-  We propose ReFlow-VC, the first voice conversion acoustic model based on a Rectified Flow Model.
+
+Specifically, the ReFlow-VC model is an ordinary differential equation (ODE) model that transforms a Gaussian distribution into the true mel-spectrogram distribution via a direct path as much as possible, and is trained using a simple unconstrained least squares optimization procedure [^Guan2024Reflow-TTS].
+
+-  We propose a modeling approach that optimizes speaker features using both content and pitch.
+
+Through cross-attention and gated fusion, it effectively integrates multiple input features (such as speaker characteristics, content information, pitch, etc.), thereby enhancing the model's expressive capability.
+
+This enables fine-grained control over the target speaker’s attributes, making the voice conversion task more precise.
