--- a/Models/-VC/2025.05.22_EZ-VC.md
+++ b/Models/-VC/2025.05.22_EZ-VC.md
@@ -20,3 +20,14 @@
   - [Publication] #TODO
 
 </details>
+
+## Abstract
+
+Voice Conversion research in recent times has increasingly focused on improving the zero-shot capabilities of existing methods.
+Despite remarkable advancements, current architectures still tend to struggle in zero-shot cross-lingual settings.
+They are also often unable to generalize for speakers of unseen languages and accents.
+In this paper, we adopt a simple yet effective approach that combines discrete speech representations from self-supervised models with a non-autoregressive Diffusion-Transformer based conditional flow matching speech decoder.
+We show that this architecture allows us to train a voice-conversion model in a purely textless, self-supervised fashion.
+Our technique works without requiring multiple encoders to disentangle speech features.
+Our model also manages to excel in zero-shot cross-lingual settings even for unseen languages.
+We provide demo samples for our model here: \href{https://ez-vc.github.io/EZ-VC-Demo/}{https://ez-vc.github.io/EZ-VC-Demo/}
