--- a/Models/-VC/2025.05.22_EZ-VC.md
+++ b/Models/-VC/2025.05.22_EZ-VC.md
@@ -265,3 +265,17 @@ We find that Vec2wav 2.0, which uses discrete units coupled with a vocoder compe
 This shows that having a CFM based speech decoder is a major benefit for voice conversion systems as they are better able to capture speech styles.
 
 They also seem to generalize very well for unseen languages and accents.
+
+## 6·Conclusion
+
+EZ-VC hopes to make a substantial advancement in the field of zero-shot voice conversion, demonstrating that high-quality voice transformation can be achieved with a minimal architecture.
+
+By leveraging discrete speech representations from self-supervised models and a non-autoregressive speech decoder, EZ-VC balances both naturalness and speaker similarity without the need for complex feature disentanglement or multiple encoders.
+
+The model's ability to generalize across diverse linguistic settings highlights its robustness in cross-lingual contexts.
+
+Our findings may also suggest that discrete representations capture deeper, more universal representations of speech.
+
+Our comprehensive evaluations show that EZ-VC achieves significantly improved capabilities for zero-shot voice conversion.
+
+We hope that our work inspires further efforts to simplify voice conversion techniques.
