--- a/Models/-VC/2025.05.22_EZ-VC.md
+++ b/Models/-VC/2025.05.22_EZ-VC.md
@@ -310,3 +310,30 @@ It is likely that using an encoder trained on only one language may not achieve 
 <a id="tab:indic">Indian Language Datasets</a>
 
 \end{document}
+
+## References
+
+[^Le2023Voicebox]: Voicebox: Text-Guided Multilingual Universal Speech Generation at Scale. 
+[^Casanova2023YourTTS]: YourTTS: Towards Zero-Shot Multi-Speaker TTS and Zero-Shot Voice Conversion for Everyone. 
+[^Li2024Sef-Vc]: SEF-VC: Speaker Embedding Free Zero-Shot Voice Conversion With Cross Attention. 
+[^Hsu2021HuBERT]: HuBERT: Self-Supervised Speech Representation Learning by Masked Prediction of Hidden Units. 
+[^Chen2022WavLM]: WavLM: Large-Scale Self-Supervised Pre-Training for Full Stack Speech Processing. IEEE Journal of Selected Topics in Signal Processing 2022.
+[^Baas2023Voice]: Voice Conversion With Just Nearest Neighbors. 
+[^Popov2022Diffusion-Based]: Diffusion-Based Voice Conversion With Fast Maximum Likelihood Sampling Scheme. 
+[^Kim2025AdaptVC]: AdaptVC: High Quality Voice Conversion With Adaptive Learning. 
+[^Yao2024StableVC]: StableVC: Style Controllable Zero-Shot Voice Conversion With Conditional Flow Matching. 
+[^Liu2024Zero-Shot]: Zero-Shot Voice Conversion With Diffusion Transformers. 
+[^Zuo2025Enhancing]: Enhancing Expressive Voice Conversion With Discrete Pitch-Conditioned Flow Matching Model. 
+[^Maiti2024Voxtlm]: Voxtlm: Unified Decoder-Only Models for Consolidating Speech Recognition, Synthesis and Speech, Text Continuation Tasks. ICASSP 2024-2024 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2024.
+[^Communication2023SeamlessM4T]: SeamlessM4T: Massively Multilingual \& Multimodal Machine Translation. 
+[^Chen2024Towards]: Towards Robust Speech Representation Learning for Thousands of Languages. 
+[^Chen2024F5-Tts]: F5-Tts: A Fairytaler That Fakes Fluent and Faithful Speech With Flow Matching. 
+[^Eskimez2024E2]: E2 TTS: Embarrassingly Easy Fully Non-Autoregressive Zero-Shot TTS. 
+[^Wang2021VoxPopuli]: VoxPopuli: A Large-Scale Multilingual Speech Corpus for Representation Learning, Semi-Supervised Learning and Interpretation. 
+[^Bhogale2022Effectiveness]: Effectiveness of Mining Audio and Text Pairs From Public Data for Improving ASR Systems for Low-Resource Languages. 
+[^Ardila2020Common]: Common Voice: A Massively-Multilingual Speech Corpus. 
+[^Lee2023BigVGAN]: BigVGAN: A Universal Neural Vocoder With Large-Scale Training. 
+[^Zen2019LibriTTS]: LibriTTS: A Corpus Derived From LibriSpeech for Text-to-Speech. 
+[^Saeki2022Utmos]: UTMOS: UTokyo-SaruLab System for VoiceMOS Challenge 2022. 
+[^Desplanques2020Ecapa-Tdnn]: Ecapa-Tdnn: Emphasized Channel Attention, Propagation and Aggregation in TDNN Based Speaker Verification. arXiv:2005.07143.
+[^Choi2023Diff-HierVC]: Diff-HierVC: Diffusion-Based Hierarchical Voice Conversion With Robust Pitch Generation and Masked Prior for Zero-Shot Speaker Adaptation. 
