--- a/Models/-VC/2025.06.03_StarVC.md
+++ b/Models/-VC/2025.06.03_StarVC.md
@@ -22,3 +22,13 @@
   - [Publication] #TODO
 
 </details>
+
+## Abstract
+
+Voice Conversion (VC) modifies speech to match a target speaker while preserving linguistic content.
+Traditional methods usually extract speaker information directly from speech while neglecting the explicit utilization of linguistic content.
+Since VC fundamentally involves disentangling speaker identity from linguistic content, leveraging structured semantic features could enhance conversion performance.
+However, previous attempts to incorporate semantic features into VC have shown limited effectiveness, motivating the integration of explicit text modeling.
+We propose **StarVC**, a unified autoregressive VC framework that first predicts text tokens before synthesizing acoustic features.
+The experiments demonstrate that StarVC outperforms conventional VC methods in preserving both linguistic content (i.e., WER and CER) and speaker characteristics (i.e., SECS and MOS).
+Audio demo can be found at: \url{https://thuhcsi.github.io/StarVC/}.
