--- a/Models/-VC/2025.06.03_StarVC.md
+++ b/Models/-VC/2025.06.03_StarVC.md
@@ -203,3 +203,127 @@ By jointly optimizing ASR and VC objectives, we enable the model to balance ling
 To enhance speaker diversity, we use OpenVoice V2\footnote{\url{https://github.com/myshell-ai/OpenVoice}} to synthesize multiple variations of the same utterance with different speakers.
 
 During training, we randomly select real or synthesized speech as the target audio, reducing the model’s reliance on strictly parallel real-world recordings and enhancing its robustness.
+
+## 3·Experiments
+
+### Training
+
+We train our model on 8 NVIDIA H100 80G GPUs using three sequential phases: ASR Pretraining (30 hours), VC Training (50 hours) and Joint ASR-VC Training (100 hours).
+
+Our LM is a 24-layer transformer [^Vaswani2017Attention] (intermediate size=4,864, embedding dim=896 and 14 heads), following the same architecture as Qwen2.5-0.5B\footnote{\url{https://github.com/QwenLM/Qwen2.5}}.
+
+During VC Training, we adopt a 50\%/50\% probability of selecting real or OpenVoice V2-synthesized parallel data.
+
+In order to allow the model to synthesize more real speech, the ratio was adjusted to 80\%/20\% in the Joint ASR-VC Training.
+
+Acoustic token weights are set to [1.0, 1.0, 0.9, 0.9, 0.8, 0.8, 0.7, 0.7] across eight codebook layers.
+
+The batch size is set to 6, and we utilize Qwen's [^Bai2023Qwen], [^Yang2024Qwen2.] tokenizer for text tokenization, with a text vocabulary size of 151,936 and an audio vocabulary size of 2,048.
+
+#### Datasets
+
+We use two English speech datasets for training: GigaSpeech [^Chen2021Gigaspeech] (10,000 hours) and LibriTTS [^Zen2019Libritts], [^Panayotov2015Librispeech] (960 hours) .
+
+GigaSpeech covers diverse domains and acoustic conditions, while LibriTTS is cleaner and more consistent.
+
+By combining them, we enable StarVC to handle both real-world variability and well-segmented, high-quality speech.
+
+### Evaluation
+
+We select 400 utterances from the LibriTTS test-clean set, partitioning them into 200 source and 200 target utterances. 
+
+None of these samples appear in the training process, ensuring a fair evaluation.
+
+\vspace{0.5em}  **Baseline Methods.**
+
+We compare our proposed StarVC against three existing methods: 
+
+ 
+
+-  \emph{CosyVoice} [^Du2024Cosyvoice], [^Du2024CosyVoice]: A diffusion-based speech generation approach from Alibaba, featuring a VC variant. 
+
+-  \emph{OpenVoice V2} [^Qin2023OpenVoice]: A large-scale, zero-shot VC model built upon YourTTS [^Casanova2022Yourtts]. 
+
+-  \emph{TriAAN-VC} [^Park2023TriAAN-Vc]: A deep-learning-based framework for any-to-any VC, focusing on disentangling linguistic content and target speaker characteristics. 
+
+\vspace{0.5em}  **Evaluation Metrics.**
+
+We adopt the following metrics to gauge performance: 
+
+ 
+
+-  \emph{SECS (Speaker Embedding Cosine Similarity)}: Quantifies timbre similarity by comparing embeddings (extracted via Resemblyzer\footnote{\url{https://github.com/resemble-ai/Resemblyzer}} and a fine-tuned WavLM\footnote{\url{https://github.com/BytedanceSpeech/seed-tts-eval}}) from the converted speech to those of the target. 
+
+-  \emph{WER (Word Error Rate)}: Assesses how accurately the linguistic content is preserved by transcribing the converted audio (using Whisper-large [^Radford2023Robust]) and comparing it to the ground-truth text.
+
+We also report WER-Text, reflecting the accuracy of StarVC’s generated text tokens. 
+
+-  \emph{CER (Character Error Rate)}: Evaluates character-level transcription accuracy.
+
+We also track CER-Text to measure how closely the model's generated text tokens match the reference at the character level.
+
+A lower CER signifies fewer insertions, deletions, or substitutions, indicating better fine-grained textual fidelity.
+
+-  \emph{MOS (Mean Opinion Score)}: Subjective listening tests on 20 randomly selected source-target pairs, participated by 20 listeners.
+
+We report naturalness MOS (NMOS) and speaker similarity MOS (SMOS). 
+
+<a id="">MOS Evaluation of StarVC and Baselines with 95\% confidence interval. **Note:** **Bold** values indicate the best results, and \underline{underlined} values indicate the second-best results.</a>
+
+### Results and Analysis
+
+#### Overall Objective Metrics
+
+Table 1 presents comprehensive objective evaluation results for StarVC and baselines, including ablation studies.
+
+SECS-Res and SECS-WavLM quantify speaker similarity, while WER and CER measure linguistic content preservation.
+
+WER-Text and CER-Text assess StarVC's generated text accuracy.
+
+Analysis reveals distinct performance patterns.
+
+Regarding speaker similarity, CosyVoice\footnote{\url{https://github.com/FunAudioLLM/CosyVoice}} attained marginally higher SECS-Res and SECS-WavLM scores than StarVC, indicating a slight edge via embedding metrics.
+
+Crucially, StarVC demonstrated robust timbre adaptation, closely approaching CosyVoice's performance.
+
+TriAAN-VC\footnote{\url{https://github.com/winddori2002/TriAAN-VC}} exhibited significantly lower scores, suggesting weaker speaker retention.
+
+StarVC achieved clear superiority in linguistic fidelity.
+
+It attained the lowest WER at 6.27\%, substantially outperforming CosyVoice's 8.24\% and OpenVoice V2's 8.17\%.
+
+Simultaneously, StarVC achieved the lowest CER of 4.09\%, surpassing CosyVoice's 4.27\% and OpenVoice V2's 4.15\%.
+
+This dual lead across word and character levels underscores StarVC's exceptional content preservation.
+
+TriAAN-VC's high WER and CER highlight its content preservation challenges.
+
+A key StarVC differentiator is its exceptionally accurate text token generation, with WER-Text at 4.95\% and CER-Text at 1.51\%.
+
+These results validate the efficacy of its integrated text generation mechanism, a unique capability among baselines. 
+
+#### Subjective Ratings
+
+Subjective MOS evaluations in Table 2 corroborate these findings.
+
+StarVC achieved the highest scores in both speaker similarity and naturalness.
+
+CosyVoice and OpenVoice V2 delivered comparable performance, while TriAAN-VC lagged significantly.
+
+Notably, StarVC's NMOS lower confidence bound (4.09) exceeds CosyVoice's (4.07), and its SMOS lower bound (3.90) exceeds OpenVoice V2's (3.89), suggesting a perceptible advantage.
+
+The high NMOS approaches highly natural speech levels, while the leading SMOS reflects superior perceived speaker matching.
+
+#### Ablation Study
+
+We examine the impact of multi-stage training, text-token generation, and model size.
+
+Without multi-stage training, performance degrades, as shown by WER rising from 6.27\% to 7.24\% and SECS-Res falling from 0.835 to 0.812.
+
+Eliminating text tokens results in a significant decline in speaker similarity and higher WER, though it maintains relatively good CER compared to baselines like OpenVoice V2.
+
+However, this ablation forfeits text-level outputs entirely, underscoring that text conditioning is critical for generating explicit textual representations.
+
+A smaller model further diminishes performance, revealing the need for sufficient capacity to capture both acoustic details and textual correctness.
+
+Overall, these findings confirm that multi-stage training, text token generation and a sufficiently large model are pivotal for StarVC’s success, allowing it to excel in both objective and subjective evaluations while providing accurate text output for each converted utterance.
