--- a/Models/-VC/2025.06.03_StarVC.md
+++ b/Models/-VC/2025.06.03_StarVC.md
@@ -339,3 +339,12 @@ Our evaluation suggests that StarVC achieves competitive speaker similarity, int
 Multi-stage training, text token conditioning and sufficient model capacity contribute to effective timbre transfer and linguistic preservation.
 
 Overall, StarVC unifies voice conversion and transcription, making it suitable for applications such as interactive dialogue systems, content creation, and personalized speech services.
+
+## 5·Acknowledgements
+
+This work is supported by National Natural Science Foundation of China (62076144) and Shenzhen Science and Technology Program (JCYJ20220818101014030).
+
+\bibliographystyle{IEEEtran}
+\bibliography{template}
+
+\end{document}
