--- a/Models/-VC/2025.06.03_StarVC.md
+++ b/Models/-VC/2025.06.03_StarVC.md
@@ -348,3 +348,42 @@ This work is supported by National Natural Science Foundation of China (62076144
 \bibliography{template}
 
 \end{document}
+
+## References
+
+[^Stylianou1998Continuous]: Continuous Probabilistic Transform for Voice Conversion. IEEE Transactions on Speech and Audio Processing 1998.
+[^Bargum2023Reimagining]: Reimagining Speech: A Scoping Review of Deep Learning-Powered Voice Conversion. arXiv:2311.08104.
+[^Sisman2020Overview]: An Overview of Voice Conversion and Its Challenges: From Statistical Modeling to Deep Learning. IEEE/ACM Transactions on Audio, Speech, and Language Processing 2020.
+[^Chen2022Wavlm]: Wavlm: Large-Scale Self-Supervised Pre-Training for Full Stack Speech Processing. IEEE Journal of Selected Topics in Signal Processing 2022.
+[^Hsu2021Hubert]: Hubert: Self-Supervised Speech Representation Learning by Masked Prediction of Hidden Units. IEEE/ACM Transactions on Audio, Speech, and Language Processing 2021.
+[^Schneider2019Wav2vec]: Wav2vec: Unsupervised Pre-Training for Speech Recognition. arXiv:1904.05862.
+[^Baevski2020Wav2vec]: Wav2vec 2.0: A Framework for Self-Supervised Learning of Speech Representations. Advances in Neural Information Processing Systems 2020.
+[^Baade2024Neural]: Neural Codec Language Models for Disentangled and Textless Voice Conversion. Proc. Interspeech 2024 2024.
+[^Li2024Sef-Vc]: SEF-VC: Speaker Embedding Free Zero-Shot Voice Conversion With Cross Attention. ICASSP 2024-2024 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2024.
+[^Popov2021Diffusion-Based]: Diffusion-Based Voice Conversion With Fast Maximum Likelihood Sampling Scheme. arXiv:2109.13821.
+[^Yao2024StableVC]: StableVC: Style Controllable Zero-Shot Voice Conversion With Conditional Flow Matching. arXiv:2412.04724.
+[^Qin2023OpenVoice]: OpenVoice: Versatile Instant Voice Cloning. arXiv:2312.01479.
+[^Wang2023Lm-Vc]: Lm-Vc: Zero-Shot Voice Conversion via Speech Generation Based on Language Models. IEEE Signal Processing Letters 2023.
+[^Ning2024DualVC]: DualVC 3: Leveraging Language Model Generated Pseudo Context for End-to-End Low Latency Streaming Voice Conversion. arXiv:2406.07846.
+[^D{\'e}fossez2024Moshi]: Moshi: A Speech-Text Foundation Model for Real-Time Dialogue. arXiv:2410.00037.
+[^Xie2024Mini-Omni]: Mini-Omni: Language Models Can Hear, Talk While Thinking in Streaming. arXiv:2408.16725.
+[^Fang2024Llama-Omni]: Llama-Omni: Seamless Speech Interaction With Large Language Models. arXiv:2409.06666.
+[^Radford2023Robust]: Robust Speech Recognition via Large-Scale Weak Supervision. International Conference on Machine Learning 2023.
+[^Chen2023Enhanced]: An Enhanced Res2net With Local and Global Feature Fusion for Speaker Verification. arXiv:2305.12838.
+[^Copet2024Simple]: Simple and Controllable Music Generation. Advances in Neural Information Processing Systems 2024.
+[^Williams1989Learning]: A Learning Algorithm for Continually Running Fully Recurrent Neural Networks. Neural Computation 1989.
+[^Su2024Roformer]: Roformer: Enhanced Transformer With Rotary Position Embedding. Neurocomputing 2024.
+[^D{\'e}fossez2022High]: High Fidelity Neural Audio Compression. arXiv:2210.13438.
+[^Siuzdak2024Snac]: Snac: Multi-Scale Neural Audio Codec. arXiv:2410.14411.
+[^Kumar2024High-Fidelity]: High-Fidelity Audio Compression With Improved Rvqgan. Advances in Neural Information Processing Systems 2024.
+[^Liu2024SemantiCodec]: SemantiCodec: An Ultra Low Bitrate Semantic Audio Codec for General Sound. arXiv:2405.00233.
+[^Vaswani2017Attention]: Attention Is All You Need. Advances in Neural Information Processing Systems 2017.
+[^Bai2023Qwen]: Qwen Technical Report. arXiv:2309.16609.
+[^Yang2024Qwen2.]: Qwen2. 5 Technical Report. arXiv:2412.15115.
+[^Chen2021Gigaspeech]: Gigaspeech: An Evolving, Multi-Domain Asr Corpus With 10,000 Hours of Transcribed Audio. arXiv:2106.06909.
+[^Zen2019Libritts]: Libritts: A Corpus Derived From Librispeech for Text-to-Speech. arXiv:1904.02882.
+[^Panayotov2015Librispeech]: Librispeech: An Asr Corpus Based on Public Domain Audio Books. 2015 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2015.
+[^Du2024Cosyvoice]: Cosyvoice: A Scalable Multilingual Zero-Shot Text-to-Speech Synthesizer Based on Supervised Semantic Tokens. arXiv:2407.05407.
+[^Du2024CosyVoice]: CosyVoice 2: Scalable Streaming Speech Synthesis With Large Language Models. arXiv:2412.10117.
+[^Casanova2022Yourtts]: Yourtts: Towards Zero-Shot Multi-Speaker TTS and Zero-Shot Voice Conversion for Everyone. International Conference on Machine Learning 2022.
+[^Park2023TriAAN-VC]: TriAAN-VC: Triple Adaptive Attention Normalization for Any-to-Any Voice Conversion. ICASSP 2023-2023 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2023.
