--- a/Models/-VC/2024.11.28_CoDiff-VC.md
+++ b/Models/-VC/2024.11.28_CoDiff-VC.md
@@ -357,3 +357,25 @@ Additionally, naturalness experiences degradation with only coarse-grained timbr
 Furthermore, the model without dual classifier-free guidance exhibits lower speaker similarity and speech quality, emphasizing the contribution of additional regular timbre information guidance to improved timbre modeling and speech quality.
 
 \vspace{-5pt}
+
+## 4·Conclusions
+
+In this paper, we propose CoDiff-VC, a codec-assisted end-to-end framework designed for zero-shot voice conversion.
+
+We employ a pre-trained codec and a pre-encoder to decouple discrete content representations from the source speech.
+
+Meanwhile, we introduce a multi-scale speaker timbre modeling module within the diffusion model for modeling fine-grained timbre details.
+
+Our proposed CoDiff-VC excels in generating converted audio for unseen target speakers with more similar voice characteristics, higher naturalness, and improved speech quality.
+
+Additionally, we present a dual classifier-free guidance method, creating implicit classifiers for content and speaker representations to enhance the inference results of the diffusion model.
+
+However, it's worth noting that the inference speed of diffusion remains relatively slow.
+
+We aim to address and improve the reverse process of diffusion in our future work.
+
+\bibliographystyle{IEEEbib}
+
+\bibliography{refs}
+
+\end{document}
