--- a/Models/-VC/2023.02.23_QuickVC.md
+++ b/Models/-VC/2023.02.23_QuickVC.md
@@ -22,3 +22,12 @@
   - [Publication] #TODO
 
 </details>
+
+## Abstract
+
+With the development of automatic speech recognition (ASR) and text-to-speech (TTS) technology, high-quality voice conversion (VC) can be achieved by extracting source content information and target speaker information to reconstruct waveforms.
+However, current methods still require improvement in terms of inference speed.
+In this study, we propose a lightweight VITS-based VC model that uses the HuBERT-Soft model to extract content information features without speaker information.
+Through subjective and objective experiments on synthesized speech, the proposed model demonstrates competitive results in terms of naturalness and similarity.
+Importantly, unlike the original VITS model, we use the inverse short-time Fourier transform (iSTFT) to replace the most computationally expensive part.
+Experimental results show that our model can generate samples at over 5000 KHz on the 3090 GPU and over 250 KHz on the i9-10900K CPU, achieving competitive speed for the same hardware configuration.\footnote{The audio samples are available at \url{https://quickvc.github.io/quickvc-demo}}
