--- a/Models/-VC/2023.02.23_QuickVC.md
+++ b/Models/-VC/2023.02.23_QuickVC.md
@@ -103,3 +103,139 @@ The main contributions of this paper can be summarized as follows
 The inference speed of the model on the CPU is up to 280KHz.
 
 -  To make the model pay more attention to the content information in the input features, a data augmentation method is used during the training process, which improves the naturalness and similarity of the results.
+
+## 2·Method
+
+### Motivation and strategy
+
+QuickVC is inspired by VITS [^Kim2021Conditional], Soft-VC [^Niekerk2022Comparison] and MS-iSTFT-VITS [^Kawamura2022Lightweight] respectively.
+
+The backbone of QuickVC is inherited from VITS, which adopts variational inference, augmented with normalizing flows and an adversarial training process.
+
+We chose VITS as the basis for our VC system because of its ability to produce excellent speech synthesis and its non-autoregressive design, which is optimal for fast inference.
+
+However, unlike VITS, QuickVC's prior encoder takes the raw waveforms as input rather than the phonemes.
+
+The prior encoder refers to HuBERT-Soft in Soft-VC to obtain speaker-independent content feature information.
+
+Speaker embeddings are extracted by a speaker encoder to perform multi-speaker VC.
+
+In addition, the decoders of QuickVC and VITS are different.
+
+To achieve faster inference, we refer to the MS-iSTFT-VITS, which is a single-speaker TTS model that replaces the original Hifigan vocoder-based decoder [^Kong2020Hifi-Gan] with multi-stream iSTFTNet [^Kaneko2022iSTFTNet].
+
+### Model architecture
+
+QuickVC model consists of a speaker encoder, a prior encoder, a posterior encoder, an MS-iSTFT-Decoder, and a discriminator, where the architecture of the posterior encoder and discriminator follow VITS.
+
+We will focus on describing the prior encoder, speaker encoder, and  MS-iSTFT-Decoder in the following subsections.
+
+#### Prior encoder
+
+The prior encoder consists of HuBERT-Soft, a content encoder, and a  normalizing flow.
+
+As the input is no longer text but speech, the text encoder in VITS becomes HuBERT-Soft and the content encoder.
+
+HuBERT-Soft is a kind of feature extractor using HuBERT-Base as a backbone [^Hsu2021Hubert].
+
+HuBERT-Soft takes the raw waveform as input and produces a 256-dimensional content feature.  The content encoder is based on the posterior encoder in VITS.
+
+The content encoder can produce the mean and variance of the normal posterior distribution.  The normalizing flow follows VITS and is a stack of affine coupling layers.
+
+The flow is used to improve the complexity of the prior distribution, conditioned on the speaker embedding $g$, to achieve any-to-many VC.
+
+#### Speaker encoder
+
+The speaker encoder generates an encoded speaker representation from an utterance.
+
+It is trained from scratch together with the rest of the model.
+
+The network structure of the speaker encoder contains one layer of LSTM structure and one layer of fully connected layers, which is referenced from  [^Liu2021Any-to-Many].
+
+We extract mel-spectrograms from the audio signal and use them as input to the speaker encoder.
+
+We assume that the output of the content encoder does not contain any speaker information.
+
+The model then replaces the missing speaker information based on the input from the speaker encoder to synthesize speech.
+
+#### MS-iSTFT-Decoder
+
+The decoder module is considered to be the biggest bottleneck in VITS according to the previous study  [^Kawamura2022Lightweight].
+
+The decoder architecture in VITS is based on the HiFi-GAN vocoder, which uses a repeated convolution-based network to upsample the input acoustic features.
+
+We refer to the decoder architecture in MS-iSTFT-VITS, the decoder performs the following steps in sequence.
+
+First, the VAE latent variable $z$ is conditioned on the speaker embedding $g$, then upsampled by a sequence of upsample convolutional residual blocks (ResBlock)  [^He2016Deep].
+
+The upsampled $z$ is then projected to the magnitude and phase variables for each sub-band signal.
+
+Then, using the magnitude and phase variables, the iSTFT operation is performed to generate each sub-band signal.
+
+Finally, these sub-band signals are upsampled by inserting zeros between samples to match the sampling rate of the original signal and then integrated into full-band waveforms using a trainable synthesis filter.
+
+### Training strategy
+
+#### Data augmentation
+
+In the original Soft-VC, HuBERT-Soft was applied to the any-to-one VC task.
+
+To investigate whether the self-supervised features obtained by HuBERT-Soft still contain the features of the original speaker, we performed spectrogram-resize (SR) based data augmentation on the speech in the training dataset using the method in  [^Li2022FreeVC].
+
+After data augmentation, we obtained speech with the same content and speed, but with a different speaker tone.
+
+We hope that by training with augmented speech, the content encoder in the model will learn better to extract the unchanged content information. 
+
+#### Speaker encoder input
+
+In the training process, the speaker encoder is first fed with a different utterance from the same target speaker.
+
+This helps the speaker encoder in the model to follow the speaker-related information in the speech at the start of training.
+
+In the final steps of training, the target speech input is used to fine-tune the speaker encoder so that the model output is more similar to the reference speech.
+
+#### Training loss
+
+Following VITS, the QuickVC model combines VAE and adversarial training in the training process.
+
+For the generator part, the loss can be expressed as:
+
+$$
+
+{\cal L}_{v a e}={\cal L}_{r e c o n}+{\cal L}_{k l}+{\cal L}_{a d v}(G)+{\cal L}_{f m}(G),
+\label{eq0}
+
+$$
+
+where the ${\cal L}_{r e c o n}$ is reconstruction loss, which is the L1 distance between target mel-spectrogram $x_{m e l}$ and predicted mel-spectrogram ${\hat{x}}_{m e l}$:
+
+$$
+
+L_{r e c o n}=\Vert x_{m e l}-{\hat{x}}_{m e l}\Vert_{1} .
+\label{eq1}
+
+$$
+
+The ${\cal L}_{k l}$ is KL loss, which is the KL divergence between the prior distribution $p_{\theta}(z|c)$ and posterior distribution $ q_{\phi}(z|x_{l i n})$, where
+
+$$
+
+{{q_{\phi}(z|x_{l i n})=N(z;\mu_{\phi}(x_{l i n}),\sigma_{\phi}(x_{l i n})),}} 
+\label{eq2}
+
+$$
+
+$$
+
+p_{\theta}(z|c)=N(f_{\theta}(z);\mu_{\theta}(c),\sigma_{\theta}(c))|d e t\frac{\partial f_{\theta}(z)}{\partial z}|.
+\label{eq3}
+
+$$
+
+The $x_{l i n}$ is the linear spectrogram of the source speech.  $f_{\theta}$ means the normalizing flow.
+
+The condition $c$ is the content information extracted from the source waveform by HuBERT-Soft.
+
+The adversarial loss ${\cal L}_{a d v}(G)$ and the feature matching loss ${\cal L}_{f m}(G)$ is the adversarial training loss [^Mao2017Least], which is same as the VITS.
+
+To adopt adversarial training in our learning system, we add a discriminator that discriminates between the output generated by the decoder and the ground truth waveform, the loss for the discriminator is ${\cal L}_{a d v}(D)$, which is also same as the VITS.
